Fixed faq arrow vertical alignment issue

--- a/flask/app/sass/faq.scss
+++ b/flask/app/sass/faq.scss
@@ -1,5 +1,9 @@
 @import 'colors';
 
+.faq-arrow {
+  vertical-align: middle;
+}
+
 .faq-container {
   margin-top: 5%;
   margin-bottom: 5%;
